# ai-voice-agent

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  conversations.db  main.py  pyproject.toml
frontend/: index.html
